TBR: Fixing layout bug with Chrome 49

--- a/src/components/common-style/defaults.css
+++ b/src/components/common-style/defaults.css
@@ -119,6 +119,10 @@ paper-spinner::shadow .circle {
   margin-left: var(--size-space-xxsmall);
 }
 
+core-header-panel {
+  height: 100%;
+}
+
 /*
  * Delay the appearance of core tooltips to reduce accidental 'on-hover' spam.
  */
